--- a/assets/scss/index.scss
+++ b/assets/scss/index.scss
@@ -198,6 +198,10 @@
           }
         }
 
+        .is-disabled>.el-checkbox__inner::after {
+          display: none;
+        }
+
         .el-checkbox {
           &__input {
             min-width: 20px;
@@ -308,5 +312,35 @@
     .el-form-item__error {
       margin-top: 4px;
     }
+  }
+}
+
+.apexcharts-legend {
+  max-width: 200px;
+}
+
+.el-dialog {
+  border-radius: 8px !important;
+  margin: 0 !important;
+
+  &__wrapper {
+    display: flex;
+    align-items: center;
+    justify-content: center;
+  }
+
+  &__header {
+    background: #5899c8 !important;
+    border-radius: 8px 8px 0 0;
+  }
+
+  &__close {
+    color: white !important;
+    transform: scale(1.3);
+  }
+
+  &__title {
+    font-weight: bold;
+    color: white !important;
   }
 }
