--- a/assets/scss/index.scss
+++ b/assets/scss/index.scss
@@ -121,8 +121,8 @@
             }
 
             &__inner {
-              width: 100%;
-              height: 100%;
+              width: 20px;
+              height: 20px;
               border: 0;
               background-color: rgb(1, 114, 203);
 
@@ -145,8 +145,8 @@
           }
 
           &__inner {
-            width: 100%;
-            height: 100%;
+            width: 20px;
+            height: 20px;
             border: 1px solid rgb(186, 199, 213);
           }
 
@@ -266,8 +266,8 @@
             }
 
             &__inner {
-              width: 100%;
-              height: 100%;
+              width: 20px;
+              height: 20px;
               border: 0;
               background-color: rgb(1, 114, 203);
 
@@ -354,7 +354,14 @@
 }
 
 .apexcharts-legend {
-  max-width: 200px;
+  min-width: 320px;
+  max-width: 320px;
+
+  @media (min-width: 991px) {
+    min-width: 200px;
+    max-width: 200px;
+  }
+
 }
 
 .el-dialog {
