--- a/assets/scss/index.scss
+++ b/assets/scss/index.scss
@@ -377,6 +377,7 @@
   &__header {
     background: #5899c8 !important;
     border-radius: 8px 8px 0 0;
+    padding: 20px 35px 10px !important;
   }
 
   &__close {
