--- a/assets/scss/index.scss
+++ b/assets/scss/index.scss
@@ -364,6 +364,10 @@
 
 }
 
+.apexcharts-toolbar {
+  display: none !important;
+}
+
 .el-dialog {
   border-radius: 8px !important;
   margin: 0 !important;
